workflows/asana-card/app/styles/_tasks.scss
/* ... */
.todo-input {
  width: 100%;
  height: 70px;
  background-color: $studioGray-20;
  position: absolute;
  //z-index: 10;
  bottom: 0;
  left: 0;
  //z-index: 1000;
  overflow: hidden;

  &.active {
    z-index: 9999;
  }

  .task-add-icon {
    width: 50px;
    height: 70px;
    position: absolute;
    right: 0;
    bottom: 0;
    opacity: 0;
    transform: scale(0);
    @extend %flex;
    transition:opacity .1s ease-in-out;

    .material-icons {
      transform: rotate(360deg);
      transition: transform .2s .1s ease-in-out;
    }

    &.active {
      opacity: 1;
      transform: scale(1);
      transition: opacity .1s .2s ease-in-out;

      .material-icons {
        transform: rotate(0deg);
        color: $deepBlue-60 !important;
        transition: .2s ease-in-out;
      }

      &:hover {
        background-color: $studioGray-40;
      }
    }
  }

  .date-picker-wrapper {
    position: fixed;
    left: 0;
    bottom: 120px;
    background-color: white;
    width: 100%;
    border-bottom: 1px solid $studioGray-20;
    transform: scale3d(1,0,1);
    transform-origin: 50% 100%;
    transition: .2s;

    > * {
      opacity: 0;
    }

    &.active {
      transform-origin: 50% 100%;
      transform: scale3d(1,1,1);
      transition: .2s;

      > * {
        opacity: 1;
      }
    }
  }

  .input-actions {
    width: 100%;
    height: 50px;
    background-color: white;
    margin-top: -50px;
    box-shadow: 0px -3px 5px 0px rgba(0,0,0,0.1);
    display: flex;
    transform: scale3d(1,0,1);
    transition: .2s;
    //display: none;

    &.active {
      //background-color: red;
      transform: scale3d(1,1,1);
      transition: .2s;

      > * {
        opacity: 1;
        transition: opacity 0s .2s;
      }
    }

    > * {
      transition: opacity 0s .2s;
      transition: background-color 0s 0s;
      opacity: 0;

      > * {
        color: $deepBlue-60 !important;
      }

      &:hover {
        transition: background-color 0s 0s;
        background-color: $studioGray-40;
      }
    }

    .schedule {
      width: 50%;
      height: 100%;

      @extend %flex;
    }

    .assign {
      width: 50%;
      height: 100%;

      @extend %flex;

      .action-bar-assign {
        width: 35px;
        height: 35px;
        padding: 15px 0;
        margin: 0 5px;
        border: 1px solid $deepBlue-60;
        border-radius: 50%;
        cursor: pointer;

        @extend %flex;

        .material-icons {
          margin-left: -2px;
          color: $deepBlue-60 !important;
          font-size: 16px !important;
          cursor: pointer !important;
        }

        &:hover {
          background-color: $deepBlue-60;

          .material-icons {
            color: white !important;
          }
        }
      }
    }
  }

  input {
    width: 100%;
    height: 100%;
    background-color: $studioGray-20;
    font-size: 13px;
    font-weight: 300;

    padding: 0 15px;
    padding-right: 55px;
    color: $deepBlue-60;
    letter-spacing: 1px;
    transition: .1s ease-in-out;

    &::-webkit-input-placeholder {
       color: $deepBlue-60;
       font-family: 'Roboto';
       font-weight: 400;
    }

    &:focus {
      color: white;
      background-color: $blue-100;
      transition: .1s ease-in-out;

      &::-webkit-input-placeholder {
         color: white;
         font-family: 'Roboto';
         font-weight: 300;
      }

      & + .task-add-icon {
        .material-icons {
          color: white !important;
        }
        &:hover{
          background-color: $blue-120;
        }
      }
    }
  }
}

// uncomment for real scroll


// .height-100 { //targeting stuff this way
// 	height: 100%;
// }
//
//
// .height-100 {  // check dev tools for understanding this. need to target correct things and MUI is being incredibly hard to work with
//
//   > div:nth-child(3) {
//     height: 100%;
//
//     > * {
//       height: calc(100% - 50px - 70px); //Minus tabs and input area
//       overflow: hidden;
//     }
//   }
// }

/* DayPicker styles */

//colors
$color_mantle_approx: #8b9898;
$color_cararra_approx: #eaecec;
$color_monza_approx: #d0021b;
$color_alto_approx: #dce0e0;
$color_seashell_approx: #eff1f1;
$color_desert_storm_approx: #f7f8f8;
$white: #fff;
$color_havelock_blue_approx: #4a90e2;

.DayPicker {
	display: flex;
	flex-wrap: wrap;
	justify-content: center;
	position: relative;
	padding: 1rem 0;
	//Instead of the line below you could use @include user-select($select)
	user-select: none;
	&:focus {
    outline: none;
  }
  opacity: 0;
}
.DayPicker-Month {
	display: table;
	border-collapse: collapse;
	border-spacing: 0;
	//Instead of the line below you could use @include user-select($select)
	user-select: none;
	margin: 0 1rem;
}
.DayPicker-NavBar {
	position: absolute;
	left: 0;
	right: 0;
	padding: 0 .5rem;
}
.DayPicker-NavButton {
	position: absolute;
	width: 1.5rem;
	height: 1.5rem;
	background-repeat: no-repeat;
	background-position: center;
	background-size: contain;
	cursor: pointer;
}
/* ... */

